react-create-app on Heroku

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "gatsby-transformer-sharp": "^2.5.5",
     "google-maps-react": "^2.0.6",
     "nanoid": "^3.1.10",
-    "node-sass": "^6.0",
+    "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
@@ -74,5 +74,8 @@
       "prettier --write",
       "git add"
     ]
+  },
+  "engines": {
+    "node": "10.24.1"
   }
 }
