--- a/package.json
+++ b/package.json
@@ -37,9 +37,7 @@
     "react-helmet": "^6.1.0",
     "react-reveal": "^1.2.2",
     "react-scroll": "^1.7.16",
-    "react-tilt": "^0.1.4"
-  },
-  "devDependencies": {
+    "react-tilt": "^0.1.4",
     "babel-eslint": "^10.1.0",
     "eslint": "7.2.0",
     "eslint-config-airbnb": "^18.2.0",
